--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 :root{
     --main-color: #ffb43a;
     --hover-color: hsl(37, 94%, 57%);
-    --body-color: #1e1e2a;
+    --body-color: #06040e;
     --container-color: #2d2e37;
     --text-color: #fcfeff;
 }
